finished hooking things up

--- a/views/index.jade
+++ b/views/index.jade
@@ -1,8 +1,8 @@
 extends layout
 
 block content
-	h1= title
-	p Welcome to #{title}
+	h1 FoM<i>synth</i>
+	p This is a polyphonic synthesizer, with an oscillator bank on the right.  Designed for use with the Web MIDI API and Chrome.
 		div(id="synth")
 			div(id="effects")
 				div(class="effect", id='attack')
